# stm32_basic_unit

./: .gitignore  README.md
stm32_vs_2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  toolchain_target.cmake  toolchain_ut.cmake
stm32_vs_2/APP/: CMakeLists.txt  main.c  stm32_hal_msp.c  stm32f0xx_it.c
stm32_vs_2/APP/HAL/: CMakeLists.txt  flash_sector_f0.c  flash_sector_f0.h  spi_manipulation.c  spi_manipulation.h  uart_munipulation.c  uart_munipulation.h
stm32_vs_2/APP/tests/: CMakeLists.txt  test_example.c  test_flash.c  test_spi.c  test_uart.c
stm32_vs_2/STM32F4xx_System/src/: stm32f0xx_hal_msp.c  stm32f0xx_it.c
stm32_vs_2/soc_sp/: CMakelists.txt
stm32_vs_2/soc_sp/CMSIS/Device/ST/STM32F0xx/Include/: stm32f0xx.h
stm32_vs_2/soc_sp/HAL/include/: stm32f0xx_hal_conf.h  stm32f0xx_hal_def.h
